@@ -24,7 +24,7 @@ define( function( require ) {
   var molesPerLiterString = require( 'string!PH_SCALE/units.molesPerLiter' );
 
   // constants
-  var GRAPH_SIZE = new Dimension2( 275, 560 );
+  var GRAPH_SIZE = new Dimension2( 325, 600 );
 
   /**
    * @param {Solution} solution
